# WebServices-TaskForgeAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_ingredients.py  0002_create_recipes.py  0003_add_openfoodfacts_fields.py  0004_create_users.py  0005_create_user_meals.py  0006_add_recipe_macro_fields.py  0007_add_recipe_owner.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: analytics.py  auth.py  foods.py  health.py  ingredients.py  meals.py  recipe_search.py  recipes.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/models/: __init__.py  ingredient.py  recipe.py  recipe_ingredient.py  user.py  user_meal.py
app/schemas/: analytics.py  auth.py  error.py  ingredient.py  meal.py  recipe.py
app/services/: cache.py
docs/: API_DOC.md  ASSESSMENT_CHECKLIST.md  DATASET_HEALTHY_DIET.md  DATASET_OPENFOODFACTS.md
scripts/: import_healthy_diet_recipes.py  import_openfoodfacts.py  startup.py
tests/: test_config.py
